--- a/style.css
+++ b/style.css
@@ -10,14 +10,18 @@ h1 {
 }
 
 p {
-  font-size: 24px;
-  font-family: cursive;
   border-style: dotted;
   border-color: #ff5722;
   border-width: 20px;
+  font-size: 24px;
+  font-family: cursive;
+  padding: 50px;
   width: 40%;
 }
 
+img {
+  padding: 20px;
+}
 .a {
   background-color: #00bcd4;
 }
