--- a/style.css
+++ b/style.css
@@ -1,35 +1,142 @@
+#blog {
+  background-color: #e08f62;
+  margin: 0;
+  padding: 5% 5%;
+}
+
 body {
-  background-color: #dd2c00;
+  background-color: #e08f62;
+  font-family: 'Montserrat';
+  margin: 0;
+  text-align: center;
 }
 
 h1 {
-  color: #00bcd4;
-  font-size: 100px;
-  font-family: cursive;
-  width: 60%;
+  line-height: 1.5;
+  color: #fff;
+  font-family: 'Montserrat-Thin', sans-serif;
+  font-size: 4rem;
+  font-weight: bold;
+  min-width: 50%
 }
 
-p {
-  border-style: dotted;
-  border-color: #ff5722;
-  border-width: 20px;
-  font-size: 24px;
-  font-family: cursive;
-  padding: 50px;
-  width: 40%;
+h2 {
+  font-family: 'Montserrat-Bold', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
-img {
-  padding: 20px;
-}
-.a {
-  background-color: #00bcd4;
-}
-
-.b {
-  background-color: #ff5722;
+h3 {
+  color: #fff;
+  font-family: 'Montserrat-Bold', sans-serif;
+  font-size: 1.5rem;
 }
 
-.circular {
-  border-radius: 50px 50px 50px 50px / 50px 50px 50px 50px;
+.container-fluid {
+  background: url("/Users/marcolupo/Documents/Web Development/Gaifox/pexels-lachlan-ross-5967841.jpg") no-repeat center;
+  background-size: cover;
+  margin: 0;
+  min-height: 50rem;
+  padding: 2% 20%;
+}
+
+/* Nav Bar */
+.navbar {
+  padding: 0.1% 10%;
+}
+
+.navbar-brand {
+  font-family: Ubuntu;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.logo {
+  margin: 0 1rem;
+  border-radius: 20%;
+}
+
+.logo-title {
+  padding: 2% 0;
+}
+
+.nav-item {
+  padding: 0 1rem;
+}
+
+.nav-link {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/* Title */
+.title {
+  margin: 4rem;
+}
+
+.subtitle {
+  border-color: #fff;
+  border-style: solid none;
+  border-width: 5px;
+  padding: 10% 10%;
+}
+
+/* Blog */
+.blog-title {
+  margin-bottom: 5%;
+}
+
+.title-article {
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-bottom: 2rem;
+}
+
+.text-article {
+  line-height: 2rem;
+  font-weight: 600;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  text-align: left;
+}
+
+/* Contact */
+#contact {
+  background-color: #393e46;
+  color: #fff;
+  text-align: center;
+  margin: 0;
+  padding: 5% 5%;
+  padding-bottom: 1%;
+}
+
+form {
+  margin: 3rem;
+}
+
+.contact-icon {
+  font-size: 4rem;
+  margin: 1rem;
+}
+
+.icon {
+  margin: 3rem;
+}
+
+.contact-link {
+  font-size: 2rem;
+}
+
+.contact-email {
+  margin: 2rem;
+}
+
+.contact-label {
+  margin: 1rem;
+}
+
+::placeholder {
+  color: #cfd3ce;
 }
